feat objects.ipynb : Translated solution into OOP, written in objects.ipynb.

--- a/Objects.ipynb
+++ b/Objects.ipynb
@@ -87,24 +87,60 @@
     "        \n",
     "    def length(self):\n",
     "        \"\"\"\n",
+    "        Compute the length of a segment.\n",
     "        return : a float, the length of the segment.\n",
     "        \"\"\"\n",
     "        return((self.p1).distance(self.p2))\n",
     "    \n",
     "    def path_length(path):\n",
     "        \"\"\"\n",
-    "        arg1 path : a table of Points\n",
+    "        Compute the total length of a path.\n",
+    "        arg1 path : a list of Points\n",
     "        return totalLength : a float, the total length of the path made of the sequence of Points in //path//\n",
     "        \"\"\"\n",
-    "        totalLength = 0\n",
+    "        total_length = 0\n",
     "        for i in range(len(path)-1)\n",
     "            total_length += Segment(path[i],path[i+1]).length\n",
     "        return total_length\n",
     "    \n",
+    "    def point_belongs_to_segment(self,point):\n",
+    "        \"\"\"\n",
+    "        Check if a point belongs to a segment.\n",
+    "        arg1 point : A Point\n",
+    "        return: A boolean, True if point belongs to the segment. False otherwise.\n",
+    "        \"\"\"\n",
+    "        # A necessary condition is that the segment and point are aligned.\n",
+    "        # Otherwise point can't be in the segment.\n",
+    "        # compute the cross product of the points : if it is 0, it means they are not aligned.\n",
+    "        # Given the calculation performed, if the result is a float we consider that\n",
+    "        # if it is smaller than 10**(-10), it is zero up to machine error.\n",
+    "        cross_product = (point.y - self.p1.y) * (self.p2.x - self.p1.x)\\\n",
+    "                       - (point.x - self.p1.x) * (self.p2.y - self.p1.y)\n",
+    "        if (isinstance(cross_product, int) and abs(cross_product) != 0)\\\n",
+    "        or (isinstance(crossp_roduct,float) and abs(cross_product) > 0.0000000001):\n",
+    "            return False\n",
+    "\n",
+    "        # Now, the case when the points are aligned : we compute the dot product\n",
+    "        # between (point - self.p1) and (self.p2 and self.p1).\n",
+    "        dot_product = (point.x - self.p1.x)*(self.p2.x - self.p1.x)\\\n",
+    "                     + (point.y - self.p1.y)*(self.p2.y - self.p1.y)\n",
+    "        if dot_product < 0:\n",
+    "            # Then point is beyond self.p1, not between the two points.\n",
+    "            return False\n",
+    "\n",
+    "        squared_segment_length = seg_length(self.p1,self.p2)**2\n",
+    "        if dotproduct > squared_segment_length:\n",
+    "            # Then point is beyond self.p2, not between the two points.\n",
+    "            return False\n",
+    "\n",
+    "        return True\n",
+    "    \n",
     "    def intersection(self,other):\n",
     "        \"\"\"\n",
+    "        Compute the intersection of two segments, if any.\n",
     "        arg1 other : a Segment, the one with which we want to compute the intersection\n",
     "        return intersect : a Point, the intersection of the two segments.\n",
+    "        Remark : if the intersection is not in the two segments, return None.\n",
     "        \"\"\"\n",
     "        # First case : the two lines are vertical\n",
     "        if (self.p1.x == self.p2.x and other.p1.x  == other.p1.y) :\n",
@@ -148,63 +184,72 @@
     "                    and (intersect[1] >= min(other.p1.y,other.p2.y)) and (intersect[1] <= max(other.p1.y,other.p2.y))): # Checked if it is in the y-segment \n",
     "                intersect = None\n",
     "\n",
-    "\n",
     "        return(intersect)\n",
     "    \n",
     "    def orthogonal_projection(self,point):\n",
     "        \"\"\"\n",
+    "        Compute the orthogonal projection of //point// on the segment.\n",
     "        arg1 point : a Point.\n",
     "        return : a Point, the orthogonal projection of point onto self.\n",
     "        \"\"\"\n",
-    "        if self.p1.x == self.p2.x :\n",
-    "            # First case : the line containing x_1 and x_2 is vertical\n",
+    "        if self.point_belongs_to_segment(point):\n",
+    "            new_point = point\n",
+    "\n",
+    "        # Now we want to find the equation of the line containing the segment.\n",
+    "        # We have to tackle the case of the vertical line first, because then\n",
+    "        # we can't find a slope. Then we can tackle the other case,\n",
+    "        # with a slope and intercept.\n",
+    "\n",
+    "        elif self.p1.x == self.p2.x :\n",
+    "            # First case : the line containing the segment is vertical\n",
     "            new_point = (self.p1.x,point.y)\n",
     "\n",
-    "        elif self.point_belongs_to_segment(point): # point belongs to the segment \n",
-    "            new_point = y\n",
-    "\n",
     "        else :\n",
-    "        # Second case : the line containing x_1 and x_2 is not vertical\n",
-    "            a = (self.p2.y-self.p1.y)/(self.p2.x-self.p1.x)\n",
+    "        # Second case : the line containing the segment is not vertical,\n",
+    "        # so we look for its slope and intercept.\n",
+    "            a = (self.p2.y - self.p1.y)/(self.p2.x - self.p1.x)\n",
     "            b = self.p1.y - a * self.p1.x\n",
-    "            # Now we know the line containing x_1 and x_2 has the equation y = a * x + b\n",
+    "            # Now we know the line containing the segment has the equation y = a * x + b\n",
     "            # So a normal vector to this line is (a,-1)\n",
-    "            # This vector is directing the normal line passing by the point y and its equation is -x + a*y + c = 0 :\n",
+    "            # This vector is directing the normal line passing by the point y\n",
+    "            # and its equation is - x - a * y + c = 0 :\n",
     "            # let's find c!\n",
-    "            c = point.x - a*point.y\n",
+    "            c = point.x + a * point.y\n",
     "            # Now the intersection point is the point (x,y) which verifies :\n",
     "            # a*x - y = -b\n",
-    "            # -x + a*y = -c\n",
-    "            mat = np.array([[a,-1],[-1,a]])\n",
-    "            # Not invertible if a = +- 1 ie b = -a * c\n",
-    "            point = np.dot(lin.inv(mat), np.array([-b,-c]))\n",
-    "            new_point = (point[0],point[1])\n",
-    "\n",
-    "        ## express the line passing by x_1 and x_2\n",
-    "        ## line = (self.p2.y-self.p1.y)/(self.p2.x-self.p1.x)\n",
+    "            # -x - a*y = -c\n",
+    "            # We find it by inverting the matrix.\n",
+    "            mat = np.array([[a,-1],[-1,-a]])\n",
+    "            point_vector = np.dot(lin.inv(mat), np.array([-b,-c]))\n",
+    "            new_point = Point(point_vector[0],point_vector[1])\n",
     "\n",
     "        return new_point\n",
     "    \n",
-    "    def point_belongs_to_segment(self,point):\n",
+    "    def compute_area(self, other):               \n",
+    "        \"\"\" \n",
+    "        Compute the area of the quadrilateral formed by the two segments self and other.\n",
+    "        To compute it, it splits the quadrilateral into two triangles, with (self.p1,other.p2)\n",
+    "        as splitting line. Thus, be careful of not giving these two points as successive\n",
+    "        points, otherwise the computed area may be different from what you expect.\n",
+    "\n",
+    "        arg1 other : a segment of the experimental trajectory.\n",
+    "        return: area. An int, the area of the figure formed by self and other.\n",
     "        \"\"\"\n",
-    "        arg1 point : A Point\n",
-    "        return: A boolean, True if point belongs to the segment. False otherwise.\n",
-    "        \"\"\"\n",
-    "        #check that x_1, x_2 and y are aligned:\n",
-    "        crossproduct = (point.y - self.p1.y) * (self.p2.x - self.p1.x) - (point.x - self.p1.x) * (self.p2.y - self.p1.y)\n",
-    "        if (isinstance(crossproduct, int) and abs(crossproduct) != 0) or (isinstance(crossproduct,float) and abs(crossproduct) > 0.0000000001):\n",
-    "            return False\n",
+    "        area = 0\n",
     "\n",
-    "        #check that y belongs to the segment:\n",
-    "        dotproduct = (point.x - self.p1.x)*(self.p2.x - self.p1.x) + (point.y - self.p1.y)*(self.p2.y - self.p1.y)\n",
-    "        if dotproduct < 0:\n",
-    "            return False\n",
+    "        # Let's split into two triangles, on either side of (self.p1,other.p2)\n",
     "\n",
-    "        squared_segment_length = seg_length(x_1,x_2)**2\n",
-    "        if dotproduct > squared_segment_length:\n",
-    "            return False\n",
+    "        # first triangle:\n",
+    "        base = seg_length(self.p1, other.p2)\n",
+    "        height = seg_length(self.p2, ortogonal_projection(self.p1, other.p2, self.p2))\n",
+    "        area += area_right_triangle(base, height)\n",
     "\n",
-    "        return True\n",
+    "        # second triangle:\n",
+    "        base = seg_length(self.p1, other.p2)\n",
+    "        height =  seg_length(other.p1, ortogonal_projection(self.p1, other.p2, other.p1))\n",
+    "        area += area_right_triangle(base, height)\n",
+    "\n",
+    "        return area\n",
     "    "
    ]
   },
@@ -221,6 +266,7 @@
     "    \n",
     "    def __init__(self,p1,p2,p3):\n",
     "        \"\"\"\n",
+    "        Constructor.\n",
     "        arg1 p1 : a Point\n",
     "        arg2 p2 : a Point\n",
     "        arg3 p3 : a Point\n",
@@ -233,8 +279,18 @@
     "        \"\"\"\n",
     "        return : the area of the triangle.\n",
     "        \"\"\"\n",
-    "        return(0.5*np.linalg.det(np.array([[self.p2.x - self.p1.x,self.p3.x - self.p1.x ],[self.p2.y - self.p1.y, self.p3.y - self.p1.y]])))\n",
-    "        "
+    "        return(0.5*np.linalg.det(np.array([[self.p2.x - self.p1.x,self.p3.x - self.p1.x ],\\\n",
+    "                                           [self.p2.y - self.p1.y, self.p3.y - self.p1.y]])))\n",
+    "    \n",
+    "    def area_right_triangle(cls,base, height):\n",
+    "        \"\"\"\n",
+    "        Compute the area of a right triangle.\n",
+    "\n",
+    "        arg1: base. A numeral, the length of the basis of the triangle \n",
+    "        arg2: height. A numeral, the length of the basis of the triangle\n",
+    "        return: the area of the rectangle\n",
+    "        \"\"\"\n",
+    "        return np.abs((base * height) / 2)\n"
    ]
   },
   {
@@ -243,10 +299,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Geometry:\n",
+    "class Quadrilateral:\n",
     "    \n",
-    "    def computeArea:\n",
-    "        pass"
+    "    def __init__(self,p1,p2,p3,p4):\n",
+    "        \"\"\"\n",
+    "        Constructor.\n",
+    "        arg1 p1 : a Point\n",
+    "        arg2 p2 : a Point\n",
+    "        arg3 p3 : a Point\n",
+    "        arg4 p4 : a Point\n",
+    "        \"\"\"\n",
+    "        self.p1 = p1\n",
+    "        self.p2 = p2\n",
+    "        self.p3 = p3\n",
+    "        self.p4 = p4\n",
+    "    "
    ]
   },
   {
