--- a/solution.ipynb
+++ b/solution.ipynb
@@ -56,10 +56,13 @@
    "source": [
     "def trajectory_error(coord_th,coord_exp):\n",
     "    \"\"\"\n",
+    "    Compute the error between the theoretical and the experimental trajectories,\n",
+    "    in the format decided, that is, the area between the two paths divided by\n",
+    "    the length of the theoretical path.\n",
     "    arg1 coord_th : a list of tuples (x,y). The path which should be followed.\n",
     "    arg2 coord_exp: a list of tuples (x,y). The points received from the \"indoors-gps\"\n",
     "    return: error, the total area difference betweeen the theoretical trajectory\n",
-    "    and the experimental one divided by the length of coord_th.\n",
+    "    and the experimental one, divided by the length of coord_th.\n",
     "    \"\"\"\n",
     "    # initialize values:\n",
     "    area = 0 # the total area between the theoretical and experimental paths\n",
@@ -136,6 +139,7 @@
     "\n",
     "def seg_length(x_1,x_2):\n",
     "    \"\"\"\n",
+    "    Compute the length of a segment.\n",
     "    arg1 x_1 : A tuple, the coordinates of the first point of the segment\n",
     "    arg2 x_2 : A tuple, the coordinates of the second point of the segment\n",
     "    return : A float, the length of the segment made up by x_1 and x_2\n",
@@ -145,6 +149,7 @@
     "\n",
     "def path_length(path):\n",
     "    \"\"\"\n",
+    "    Compute the length of a path.\n",
     "    arg1 path : A table of tuples, each tuple representing the coordinates of a point of the path.\n",
     "    return : leng. A float, \n",
     "    \"\"\"\n",
@@ -154,13 +159,45 @@
     "        leng += seg_length(path[i],path[i+1])\n",
     "    return(leng)\n",
     "\n",
+    "def point_belongs_to_segment(x_1, x_2, y):\n",
+    "    \"\"\"\n",
+    "    Check if a point belongs to a segment.\n",
+    "    \n",
+    "    arg1,2 x_i: A tuple, the coordinates of a point on the theoretical trajectory\n",
+    "    arg3 y: A tuple, the coordinates of a point on the experimental trajectory\n",
+    "    return: A boolean, True if y belongs to the segment [x_1,x_2]. False otherwise.\n",
+    "    \"\"\"\n",
+    "    # A necessary condition is that x_1, x_2 and y are aligned.\n",
+    "    # Otherwise y can't be in the segment.\n",
+    "    # compute the cross product of the points : if it is 0, it means they are not aligned.\n",
+    "    # Given the calculation performed, if the result is a float we consider that\n",
+    "    # if it is smaller than 10**(-10), it is zero up to machine error.\n",
+    "    cross_product = (y[1] - x_1[1]) * (x_2[0] - x_1[0]) - (y[0] - x_1[0]) * (x_2[1] - x_1[1])\n",
+    "    if (isinstance(cross_product, int) and abs(cross_product) != 0)\\\n",
+    "    or (isinstance(cross_product,float) and abs(cross_product) > 0.0000000001):\n",
+    "        return False\n",
+    "\n",
+    "    # Now, the case when the points are aligned : we compute the dot product\n",
+    "    # between (y-x_1) and (x_2-x1).\n",
+    "    dot_product = (y[0] - x_1[0])*(x_2[0] - x_1[0]) + (y[1] - x_1[1])*(x_2[1] - x_1[1])\n",
+    "    if dot_product < 0:\n",
+    "        # Then y is beyond x_1, not between the two points.\n",
+    "        return False\n",
+    "\n",
+    "    squared_segment_length = seg_length(x_1,x_2)**2\n",
+    "    if dot_product > squared_segment_length:\n",
+    "        # Then y is beyond x_2, not between the two points.\n",
+    "        return False\n",
+    "\n",
+    "    return True\n",
     "\n",
     "def intersection(x_1, x_2, y_1, y_2):\n",
     "    \"\"\"\n",
+    "    Compute the intersection of two segments, if any.\n",
     "    arg1,2 x_i: A tuple, the coordinates of a point on the theoretical trajectory\n",
     "    arg3,4 y_i: A tuple, the coordinates of a point on the experimental trajectory\n",
-    "    return: intersect. A tuple, the coordinates of the intersection or null.\n",
-    "    Remark : if the intersection is not in the two segments, returns None.\n",
+    "    return: intersect. A tuple, the coordinates of the intersection.\n",
+    "    Remark : if the intersection is not in the two segments, return None.\n",
     "    \"\"\"\n",
     "\n",
     "    # First case : the two lines are vertical\n",
@@ -222,7 +259,7 @@
     "        new_point = y\n",
     "        \n",
     "    # Now we want to find the equation of the line containing x_1 and x_2.\n",
-    "    # We have to tackle the case of the vertical line first, because\n",
+    "    # We have to tackle the case of the vertical line first, because then\n",
     "    # we can't find a slope. Then we can tackle the other case,\n",
     "    # with a slope and intercept.\n",
     "    \n",
@@ -243,11 +280,22 @@
     "        # Now the intersection point is the point (x,y) which verifies :\n",
     "        # a*x - y = -b\n",
     "        # -x - a*y = -c\n",
+    "        # We find it by inverting the matrix.\n",
     "        mat = np.array([[a,-1],[-1,-a]])\n",
     "        point = np.dot(lin.inv(mat), np.array([-b,-c]))\n",
     "        new_point = (point[0],point[1])\n",
     "        \n",
     "    return new_point\n",
+    "\n",
+    "def area_right_triangle(base, height):\n",
+    "    \"\"\"\n",
+    "    Compute the area of a right triangle.\n",
+    "    \n",
+    "    arg1: base. A numeral, the length of the basis of the triangle \n",
+    "    arg2: height. A numeral, the length of the basis of the triangle\n",
+    "    return: the area of the rectangle\n",
+    "    \"\"\"\n",
+    "    return np.abs((base * height) / 2)\n",
     "                       \n",
     "def compute_area(x_1, x_2, y_1, y_2):               \n",
     "    \"\"\" \n",
@@ -274,49 +322,7 @@
     "    height =  seg_length(y_1, ortogonal_projection(x_1, y_2, y_1))\n",
     "    area += area_right_triangle(base, height)\n",
     "\n",
-    "    return area\n",
-    "\n",
-    "def area_right_triangle(base, height):\n",
-    "    \"\"\"\n",
-    "    Compute the area of a right triangle.\n",
-    "    \n",
-    "    arg1: base. A numeral, the length of the basis of the triangle \n",
-    "    arg2: height. A numeral, the length of the basis of the triangle\n",
-    "    return: the area of the rectangle\n",
-    "    \"\"\"\n",
-    "    return np.abs((base * height) / 2)\n",
-    "\n",
-    "def point_belongs_to_segment(x_1, x_2, y):\n",
-    "    \"\"\"\n",
-    "    Check if a point belongs to a segment.\n",
-    "    \n",
-    "    arg1,2 x_i: A tuple, the coordinates of a point on the theoretical trajectory\n",
-    "    arg3 y: A tuple, the coordinates of a point on the experimental trajectory\n",
-    "    return: A boolean, True if y belongs to the segment [x_1,x_2]. False otherwise.\n",
-    "    \"\"\"\n",
-    "    # A necessary condition is that x_1, x_2 and y are aligned.\n",
-    "    # Otherwise y can't be in the segment.\n",
-    "    # compute the cross product of the points : if it is 0, it means they are not aligned.\n",
-    "    # Given the calculation performed, if the result is a float we consider that\n",
-    "    # if it is smaller than 10**(-10), it is zero up to machine error.\n",
-    "    cross_product = (y[1] - x_1[1]) * (x_2[0] - x_1[0]) - (y[0] - x_1[0]) * (x_2[1] - x_1[1])\n",
-    "    if (isinstance(cross_product, int) and abs(cross_product) != 0)\\\n",
-    "    or (isinstance(cross_product,float) and abs(cross_product) > 0.0000000001):\n",
-    "        return False\n",
-    "\n",
-    "    # Now, the case when the points are aligned : we compute the dot product\n",
-    "    # between (y-x_1) and (x_2-x1).\n",
-    "    dot_product = (y[0] - x_1[0])*(x_2[0] - x_1[0]) + (y[1] - x_1[1])*(x_2[1] - x_1[1])\n",
-    "    if dot_product < 0:\n",
-    "        # Then y is beyond x_1, not between the two points.\n",
-    "        return False\n",
-    "\n",
-    "    squared_segment_length = seg_length(x_1,x_2)**2\n",
-    "    if dot_product > squared_segment_length:\n",
-    "        # Then y is beyond x_2, not between the two points.\n",
-    "        return False\n",
-    "\n",
-    "    return True"
+    "    return area\n"
    ]
   }
  ],
