--- a/Objects.ipynb
+++ b/Objects.ipynb
@@ -63,18 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-b5a05b0efd4e>, line 31)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-b5a05b0efd4e>\"\u001b[1;36m, line \u001b[1;32m31\u001b[0m\n\u001b[1;33m    for i in range(len(path)-1)\u001b[0m\n\u001b[1;37m                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -108,7 +99,7 @@
     "        return totalLength : a float, the total length of the path made of the sequence of Points in //path//\n",
     "        \"\"\"\n",
     "        total_length = 0\n",
-    "        for i in range(len(path)-1)\n",
+    "        for i in range(len(path)-1):\n",
     "            total_length += Segment(path[i],path[i+1]).length\n",
     "        return total_length\n",
     "    \n",
@@ -126,7 +117,7 @@
     "        cross_product = (point.y - self.p1.y) * (self.p2.x - self.p1.x)\\\n",
     "                       - (point.x - self.p1.x) * (self.p2.y - self.p1.y)\n",
     "        if (isinstance(cross_product, int) and abs(cross_product) != 0)\\\n",
-    "        or (isinstance(crossp_roduct,float) and abs(cross_product) > 0.0000000001):\n",
+    "        or (isinstance(cross_product,float) and abs(cross_product) > 0.0000000001):\n",
     "            return False\n",
     "\n",
     "        # Now, the case when the points are aligned : we compute the dot product\n",
@@ -137,7 +128,7 @@
     "            # Then point is beyond self.p1, not between the two points.\n",
     "            return False\n",
     "\n",
-    "        squared_segment_length = seg_length(self.p1,self.p2)**2\n",
+    "        squared_segment_length = self.length()**2\n",
     "        if dotproduct > squared_segment_length:\n",
     "            # Then point is beyond self.p2, not between the two points.\n",
     "            return False\n",
@@ -159,13 +150,13 @@
     "        elif self.p1.x == self.p2.x :\n",
     "            a = (other.p1.y-other.p2.y)/(other.p1.x-other.p1.y)\n",
     "            b = other.p2.y - a * other.p1.y\n",
-    "            intersect = (self.p1.x,a*self.p1.x + b)\n",
+    "            intersect = Point(self.p1.x,a*self.p1.x + b)\n",
     "\n",
     "        # Third case : only the second line is vertical\n",
     "        elif other.p1.x  == other.p1.y :\n",
     "            a = (self.p1.y-self.p2.y)/(self.p1.x-self.p2.x)\n",
     "            b = self.p2.y - a * self.p2.x\n",
-    "            intersect = (other.p1.x,a*other.p1.x + b)\n",
+    "            intersect = Point(other.p1.x,a*other.p1.x + b)\n",
     "\n",
     "        # Last case : general case\n",
     "        else :\n",
@@ -183,14 +174,11 @@
     "                #y = a_x*x + b_x\n",
     "                #y = a_y*x + b_y\n",
     "                # The solution is the inverted matrix\n",
-    "                intersect = ( (b_y-b_x)/(a_x-a_y),\\\n",
+    "                intersect = Point( (b_y-b_x)/(a_x-a_y),\\\n",
     "                              (b_y * a_x - b_x * a_y)/(a_x - a_y) )\n",
     "        # If a point is found, check if it belongs to the segments and not only the lines (self.p1.x<intersect[0]<self.p2.x or...)\n",
     "        if intersect :\n",
-    "            if not ( (intersect[0] >= min(self.p1.x,self.p2.x)) and (intersect[0] <= max(self.p1.x,self.p2.x))\\\n",
-    "                    and (intersect[1] >= min(self.p1.y,self.p2.y)) and (intersect[1] <= max(self.p1.y,self.p2.y))\\\n",
-    "                    and (intersect[0] >= min(other.p1.x,other.p1.y)) and (intersect[0] <= max(other.p1.x,other.p1.y))\\\n",
-    "                    and (intersect[1] >= min(other.p1.y,other.p2.y)) and (intersect[1] <= max(other.p1.y,other.p2.y))): # Checked if it is in the y-segment \n",
+    "            if not self.point_belongs_to_segment(intersect):\n",
     "                intersect = None\n",
     "\n",
     "        return(intersect)\n",
@@ -211,7 +199,7 @@
     "\n",
     "        elif self.p1.x == self.p2.x :\n",
     "            # First case : the line containing the segment is vertical\n",
-    "            new_point = (self.p1.x,point.y)\n",
+    "            new_point = Point(self.p1.x,point.y)\n",
     "\n",
     "        else :\n",
     "        # Second case : the line containing the segment is not vertical,\n",
@@ -249,14 +237,16 @@
     "        # Let's split into two triangles, on either side of (self.p1,other.p2)\n",
     "\n",
     "        # first triangle:\n",
-    "        base = seg_length(self.p1, other.p2)\n",
-    "        height = seg_length(self.p2, ortogonal_projection(self.p1, other.p2, self.p2))\n",
-    "        area += area_right_triangle(base, height)\n",
+    "        base = Segment(self.p1, other.p2).length()\n",
+    "        height = Segment(self.p2, Segment(self.p1, other.p2).ortogonal_projection(self.p2)).length()\n",
+    "        area += Triangle.area_right_triangle(base, height)\n",
     "\n",
     "        # second triangle:\n",
-    "        base = seg_length(self.p1, other.p2)\n",
-    "        height =  seg_length(other.p1, ortogonal_projection(self.p1, other.p2, other.p1))\n",
-    "        area += area_right_triangle(base, height)\n",
+    "        base = Segment(self.p1, other.p2).length()\n",
+    "        # base = self.seg_length(self.p1, other.p2)\n",
+    "        height = Segment(other.p1, Segment(self.p1, other.p2).ortogonal_projection(other.p1)).length()\n",
+    "        # height =  self.seg_length(other.p1, ortogonal_projection(self.p1, other.p2, other.p1))\n",
+    "        area += Triangle.area_right_triangle(base, height)\n",
     "\n",
     "        return area\n",
     "    "
@@ -264,24 +254,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'np'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-62ce71d92fd3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mTriangle\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'np'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import np.linalg\n",
+    "import numpy.linalg\n",
     "\n",
     "class Triangle:\n",
     "    \n",
@@ -316,18 +294,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-8b57e8356efa>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-8b57e8356efa>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    def computeArea:\u001b[0m\n\u001b[1;37m                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Quadrilateral:\n",
     "    \n",
@@ -348,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,13 +333,6 @@
     "        self.expe = expe\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
