feat Objects.ipynb : finished translating the functions into OOP.

--- a/Objects.ipynb
+++ b/Objects.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import sqrt\n",
+    "import doctest\n",
+    "import numpy as np\n",
+    "import numpy.linalg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -11,15 +23,12 @@
        "TestResults(failed=0, attempted=3)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from math import sqrt\n",
-    "import doctest\n",
-    "\n",
     "class Point:\n",
     "    \n",
     "    \"\"\"\n",
@@ -67,8 +76,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "class Segment:\n",
     "    \n",
     "    \"\"\"\n",
@@ -243,9 +250,9 @@
     "\n",
     "        # second triangle:\n",
     "        base = Segment(self.p1, other.p2).length()\n",
-    "        # base = self.seg_length(self.p1, other.p2)\n",
+    "        # base = self.length(self.p1, other.p2)\n",
     "        height = Segment(other.p1, Segment(self.p1, other.p2).ortogonal_projection(other.p1)).length()\n",
-    "        # height =  self.seg_length(other.p1, ortogonal_projection(self.p1, other.p2, other.p1))\n",
+    "        # height =  self.length(other.p1, ortogonal_projection(self.p1, other.p2, other.p1))\n",
     "        area += Triangle.area_right_triangle(base, height)\n",
     "\n",
     "        return area\n",
@@ -254,13 +261,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import numpy.linalg\n",
-    "\n",
     "class Triangle:\n",
     "    \n",
     "    def __init__(self,p1,p2,p3):\n",
@@ -294,30 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Quadrilateral:\n",
-    "    \n",
-    "    def __init__(self,p1,p2,p3,p4):\n",
-    "        \"\"\"\n",
-    "        Constructor.\n",
-    "        arg1 p1 : a Point\n",
-    "        arg2 p2 : a Point\n",
-    "        arg3 p3 : a Point\n",
-    "        arg4 p4 : a Point\n",
-    "        \"\"\"\n",
-    "        self.p1 = p1\n",
-    "        self.p2 = p2\n",
-    "        self.p3 = p3\n",
-    "        self.p4 = p4\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,6 +312,83 @@
     "        \"\"\"\n",
     "        self.theo = theo\n",
     "        self.expe = expe\n",
+    "    \n",
+    "    def trajectory_error():\n",
+    "        \"\"\"\n",
+    "        Compute the error between the theoretical and the experimental trajectories,\n",
+    "        in the format decided, that is, the area between the two paths divided by\n",
+    "        the length of the theoretical path.\n",
+    "        arg1 coord_th : a list of Points. The path which should be followed.\n",
+    "        arg2 coord_exp: a list of Points. The points received from the \"indoors-gps\"\n",
+    "        return: error, the total area difference betweeen the theoretical trajectory\n",
+    "        and the experimental one, divided by the length of the theoretical path.\n",
+    "        \"\"\"\n",
+    "        # initialize values:\n",
+    "        area = 0 # the total area between the theoretical and experimental paths\n",
+    "        distance = theo.path_length() # total theoretical path length\n",
+    "        j = 0 # iterator over the experimental path\n",
+    "        i = 0 # iterator over the theoretical path\n",
+    "\n",
+    "        # start iterations:\n",
+    "        while (i+1 < len(theo) and j+1 < len(expe)):     \n",
+    "            # we work on a subsegment [coord_th[i], coord_th[i+1]]        \n",
+    "            # search for an intersection:\n",
+    "            intersect_point = Segment(theo[i],theo[i+1]).intersection(Segment(expe[j],expe[j+1]))\n",
+    "            # compute orthogonal projections:\n",
+    "            splitting_segment = Segment(theo[i],theo[i+1])\n",
+    "            ort_proj1 =  splitting_segment.ortogonal_projection(expe[j])\n",
+    "            ort_proj2 =  splitting_segment.ortogonal_projection(expe[j+1])\n",
+    "\n",
+    "            if intersect_point:\n",
+    "\n",
+    "                if intersect_point == theo[i+1] == expe[j]:\n",
+    "                    # we're outside of the subsegment\n",
+    "                    i += 1 # advance along the theoretical path                 \n",
+    "\n",
+    "                elif splitting_segment.point_belongs_to_segment(ort_proj1)\\\n",
+    "                and splitting_segment.point_belongs_to_segment(ort_proj2):\n",
+    "                    # Before the intersection:\n",
+    "                    # the points form the right triangle -> coord_exp[j], its projection, intersection\n",
+    "                    base = Segment(ort_proj1,intersect_point).length()\n",
+    "                    height =  Segment(expe[j], ort_proj1).length()\n",
+    "                    area += area_right_triangle(base, height)\n",
+    "\n",
+    "                    # After the intersection:\n",
+    "                    # the points form the right triangle -> intersect_point, coord_exp[j+1], its projection\n",
+    "                    base = Segment(intersect_point, ort_proj2).length()\n",
+    "                    height =  Segment(expe[j+1], ort_proj2).length()\n",
+    "                    area += area_right_triangle(base, height)\n",
+    "\n",
+    "                    j += 1 # advance along the experimental path \n",
+    "\n",
+    "                else:\n",
+    "                    # Before the intersection:\n",
+    "                    # the points form the right triangle -> expe[j], its projection, intersect_point\n",
+    "                    base = Segment(expe[j], intersect_point).length()\n",
+    "                    height = Segment(theo[i],\\\n",
+    "                                     Segment(expe[j],intersect_point).orthogonal_projection(theo[i])).length()\n",
+    "                    area += area_right_triangle(base, height)\n",
+    "\n",
+    "                    # After the intersection:\n",
+    "                    # the points form the right triangle -> intersect_point, coord_exp[j+1], its projection\n",
+    "                    base = Segment(intersect_point, expe[j+1]).length()\n",
+    "                    height = Segment(theo[i+1],\\\n",
+    "                                    Segment(expe[j+1],intersect_point).orthogonal_projection(theo[i+1])).length()\n",
+    "                    area += area_right_triangle(base, height)\n",
+    "\n",
+    "                    j += 1 # advance along the experimental path \n",
+    "\n",
+    "            elif Segment(theo[i],theo[i+1]).point_belongs_to_segment(ort_proj1)\\\n",
+    "            and Segment(theo[i],theo[i+1]).point_belongs_to_segment(ort_proj2):     \n",
+    "\n",
+    "                area += Segment(ort_proj1, ort_proj2).compute_area(Segment(expe[j], expe[j+1]))\n",
+    "                j += 1 # advance along the experimental path  \n",
+    "\n",
+    "            else:\n",
+    "                # we're outside of the subsegment\n",
+    "                i += 1 # advance along the theoretical path\n",
+    "\n",
+    "        return area / distance\n",
     "    "
    ]
   }
